removed form for js route

--- a/app/views/product-case-testing/success-product-added.html
+++ b/app/views/product-case-testing/success-product-added.html
@@ -41,7 +41,7 @@
         <h3 class="govuk-notification-banner__heading">
             The product has been added
         </h3>
-        <p class="govuk-body">You can now create cases for this product.</p>
+        <!--p class="govuk-body">You can now create cases for this product.</p-->
     </div>
 </div>
 
@@ -66,12 +66,13 @@
 
   <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
 
-    Do you want to create a case for this product now?
+    <!--Do you want to create a case for this product now?-->
+    Do you want to add this product to your case?
 
   </legend>
 
   <span id="createcase-error" class="govuk-error-message">
-    <span class="govuk-visually-hidden">Error:</span> Select yes if you want to create a case for this product now
+    <span class="govuk-visually-hidden">Error:</span> Select yes if you want to add this product to your case
   </span>
 
   <div class="govuk-radios govuk-!-padding-top-3 govuk-!-padding-bottom-1">
@@ -81,7 +82,7 @@
 
 
         <div class="govuk-radios__item">
-          <input class="govuk-radios__input" id="createcase" name="createcase" type="radio" value="yes">
+          <input class="govuk-radios__input" id="createcase" name="createcase" type="radio" value="yes" disabled>
           <label class="govuk-label govuk-radios__label" for="createcase">
         Yes
       </label>
