--- a/app/views/product-case-testing/upload-a-product-image-success.html
+++ b/app/views/product-case-testing/upload-a-product-image-success.html
@@ -136,7 +136,7 @@
         <div class="govuk-!-margin-left-4 opss-borders opss-borders--left opss-borders--padding-l opss-borders--height-100">
 
             <h2 class="govuk-visually-hidden">The images you have added</h2>
-            <form novalidate>
+            <!--form novalidate-->
               <fieldset class="govuk-fieldset">
                 <dl class="govuk-summary-list govuk-!-font-size-14 opss-summary-list-aside">
                     <div class="none0">
@@ -199,7 +199,7 @@
 
               <!-- ******** hidden no js button to submit changes to the radios ******* -->
 
-          </form>
+          <!--/form-->
         </div>
     </section>
 
