updated RP edit address page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -176,6 +176,7 @@
             <!--li><a href="/responsible-person-address/responsible-person-address_individual.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - individual</a></li>
             <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
             <li>Responsible Person address form (COSBETA-1216): <br><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
+            <li>Change Responsible Person address form <br><a href="/responsible-person-address/responsible-person-address_updates.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Updates to the edit/change RP address page</a></li>
           </ul>
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
