--- a/app/views/psd-general/products-page_new-col.html
+++ b/app/views/psd-general/products-page_new-col.html
@@ -23,7 +23,7 @@
             </summary>
             <div class="govuk-details__text">
                 <p class="govuk-body-s">
-                    <span id="search-hint">You can search for one or more products by using the keywords that describe them or their <abbr>PSD</abbr> reference number.</span> You can also sort the ordering of the search results.
+                    <span id="search-hint">You can search for one or more products by using the keywords that describe them or use a single <abbr>PSD</abbr> reference number to find a specific product record.</span> You can also sort the ordering of the search results.
                 </p>
                 <p class="govuk-body-s govuk-!-margin-bottom-1">
                     You can filter the results by hazard type.
