new RP pg design

--- a/app/views/add-product-v4/upload-a-product-image-error.html
+++ b/app/views/add-product-v4/upload-a-product-image-error.html
@@ -70,7 +70,7 @@
               Upload the image file
           </label>
           <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
-            Do not upload case images related to damage or incidents.
+            Do not upload case images related to damage or incidents. (Those are evidence images used for adding to a case).
           </div>
           <span id="uploadfile-error" class="govuk-error-message">
               <span class="govuk-visually-hidden">Error:</span> Choose an image file to upload
