--- a/app/views/index.html
+++ b/app/views/index.html
@@ -177,6 +177,7 @@
             <li><a href="/responsible-person-address/responsible-person-address_business.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - business</a></li-->
             <li>Responsible Person address form (COSBETA-1216): <br><a href="/responsible-person-address/responsible-person-address_alt.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Responsible Person - form page</a></li>
             <li>Change Responsible Person address form <br><a href="/responsible-person-address/responsible-person-address_updates.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Updates to the edit/change RP address page</a></li>
+
           </ul>
 
           <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
@@ -236,6 +237,7 @@
               </li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/responsible-person.html" target="_blank">Responsible person</a></li>
               <li>Change the Responsible Person (COSBETA-1236): <br><a href="/nanomaterials-1149/change-responsible-person.html" class="govuk-link govuk-link--no-visited-state" target="_blank">Change the Responsible Person</a></li>
+              <li>Responsible Person page <br><a href="/nanomaterials-1149/responsible-person-new-edit.html" class="govuk-link govuk-link--no-visited-state" target="_blank">with new single Edit link</a></li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/team-members.html" target="_blank">Team members</a></li>
               <li><a class="govuk-link govuk-link--no-visited-state" href="/nanomaterials-1149/cosmetic-products-success.html" target="_blank">Cosmetic products - success banner</a></li>
             </ul>
