--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -20,7 +20,7 @@
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
             <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
-                Add a product
+                Add a product to the case
             </a>
         </div>
     </div>
@@ -45,13 +45,13 @@
 
                 <ul class="govuk-list">
                     <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            The Ipsum product one
+                        <a href="#prod-1" class="govuk-link govuk-link--no-visited-state">
+                            Asda dishwashing liquid
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Lorem second product name
+                        <a href="#prod-2" class="govuk-link govuk-link--no-visited-state">
+                            Asda window cleaner
                         </a>
                     </li>
                 </ul>
@@ -71,6 +71,177 @@
         </ul>
     </nav>
 
+    <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
+
+        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The Product(s) linked to this case</h2>
+
+        <section>
+            <h3 id="prod-1" class="govuk-heading-m">Asda dishwashing liquid</h3>
+
+            <dl class="govuk-summary-list">
+                <!--div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Product name
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Asda dishwashing liquid
+                    </dd>
+                </div-->
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        <abbr>PSD</abbr> <span title="reference">ref</span>   
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        psd-304
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Category
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Temporibus doloremque 
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Subcategory
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Lorem ipsum dolor elit. 
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Summary
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Product reported because it is unsafe.
+                        <!-- opss user: what is being alleged, shows here on current service -->
+                    </dd>
+                </div>
+            </dl>
+
+            <dl class="govuk-summary-list">    
+                <div class="govuk-summary-list__row opss-summary-list__row--split">
+                    <dt class="govuk-summary-list__key">
+                        Status
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Open
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Last updated</dt>
+                    <dd class="govuk-summary-list__value">About 8 hours ago</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Created</dt>
+                    <dd class="govuk-summary-list__value">13 December 2021</dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Notifying country
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <!--i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i-->
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Created by
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Darren Harridence - Renfrewshire Council
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Case owner
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Darren Harridence - Renfrewshire Council
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Change<span class="govuk-visually-hidden"> the case owner</span>
+                        </a>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Teams added
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <ul class="govuk-list govuk-list--bullet">
+                            <li>
+                                Renfrewshire Council
+                            </li>
+                            <li>
+                                Watford Council
+                            </li>
+                        </ul>
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Change<span class="govuk-visually-hidden"> the teams added</span>
+                        </a>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Case restriction
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Unrestricted
+                        <!-- OR
+                        <span class="opss-tag opss-tag--risk2 opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>Restricted
+                        -->
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Change<span class="govuk-visually-hidden"> the case restriction</span>
+                        </a>
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Case risk level</dt>
+                    <dd class="govuk-summary-list__value">
+                        <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
+                            <span class="govuk-visually-hidden">This case is a</span>Serious risk
+                        </span>
+
+                        <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                            <span class="govuk-visually-hidden"> - </span>Not validated
+                        </span>
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Change<span class="govuk-visually-hidden"> the risk level</span>
+                        </a>
+                    </dd>
+                </div>
+                <!--div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">Risk level validated</dt>
+                    <dd class="govuk-summary-list__value">No</dd>
+                </div-->
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        COVID-19
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        <span class="opss-tag opss-tag--covid opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>COVID-19 related</span>
+                    </dd>
+                    <dd class="govuk-summary-list__actions">
+                        <a href="#" class="govuk-link govuk-link--no-visited-state">
+                            Change<span class="govuk-visually-hidden"> the coronavirus status</span>
+                        </a>
+                    </dd>
+                </div>
+            </dl>
+        </section>
+
+    </section>
 </div>
 
 
