--- a/app/views/responsible-person-address/responsible-person-address_updates.html
+++ b/app/views/responsible-person-address/responsible-person-address_updates.html
@@ -24,7 +24,7 @@
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             
             <strong class="govuk-warning-text__text govuk-!-font-size-16 govuk-!-margin-bottom-4">
-                <span class="govuk-warning-text__assistive">Warning</span> You must update your cosmetic product labels with your new address. Any cosmetic products you have notified will be associated with this new address. You will not need to submit a new notification.
+                <span class="govuk-warning-text__assistive">Warning</span> You must update your cosmetic product labels with your new address. Any cosmetic products you have notified will be associated with the new address. You will not need to submit a new notification.
             </strong>
 
             <strong class="govuk-warning-text__text govuk-!-font-size-16">
