--- a/app/views/add-product-v4/upload-a-product-image-success.html
+++ b/app/views/add-product-v4/upload-a-product-image-success.html
@@ -48,7 +48,7 @@
                 Upload the image file
             </label>
             <div id="uploadfile-hint" class="govuk-hint govuk-!-font-size-16">
-                Do not upload case images related to damage or incidents.
+                Do not upload case images related to damage or incidents. (Those are evidence images used for adding to a case).
             </div>
             <div class="govuk-!-padding-top-1">
                 <input type="file" id="uploadfile" class="govuk-file-upload" name="uploadfile" aria-describedby="uploadfile-hint">
