--- a/app/views/create-cases-add-products/upload-a-product-image.html
+++ b/app/views/create-cases-add-products/upload-a-product-image.html
@@ -29,10 +29,7 @@
                     </summary>
                     <div class="govuk-details__text">
                         <p class="govuk-body-s">
-                            The first image you add will become the product's default image.
-                        </p>
-                        <p class="govuk-body-s">
-                            Do not upload case images related to damage or incidents.
+                            Do not upload case images related to damage or incidents. (Those are evidence images used for adding to a case).
                         </p>
                         <p class="govuk-body-s">
                             In addition to general product images try to add images of key details, such as plugs on electrical products or safety informations on packaging.
