--- a/app/views/responsible-person-address/responsible-person-address_alt.html
+++ b/app/views/responsible-person-address/responsible-person-address_alt.html
@@ -46,10 +46,14 @@
 
         <div class="govuk-warning-text govuk-!-margin-top-7 govuk-!-margin-bottom-6">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-            <strong class="govuk-warning-text__text">
-                <span class="govuk-warning-text__assistive">Warning</span>
-                The <abbr>UK</abbr> address provided must not be a <abbr>PO</abbr> box or mail forwarding address. These are not <abbr>UK</abbr> established addresses that comply with the regulation.
+            
+            <strong class="govuk-warning-text__text govuk-!-font-size-16 govuk-!-margin-bottom-4">
+                <span class="govuk-warning-text__assistive">Warning</span> You must update your cosmetic product labels with your new address. Any cosmetic products you have notified will be associated with the new address. You will not need to submit a new notification.
             </strong>
+
+            <strong class="govuk-warning-text__text govuk-!-font-size-16">
+                <span class="govuk-warning-text__assistive">Warning</span> The <abbr>UK</abbr> address provided must not be a <abbr>PO</abbr> box or mail forwarding address. These are not <abbr>UK</abbr> established addresses that comply with the regulation.
+            </strong>            
         </div>
 
 
@@ -69,7 +73,7 @@
                     
                     <div class="govuk-radios govuk-radios--small">
                         <div class="govuk-radios__item">
-                            <input class="govuk-radios__input" id="responsible_person_account_type_business" name="responsible_person[account_type]" type="radio" value="business" checked="checked">
+                            <input class="govuk-radios__input" id="responsible_person_account_type_business" name="responsible_person[account_type]" type="radio" value="business">
                             <label class="govuk-label govuk-radios__label govuk-!-padding-bottom-0" for="responsible_person_account_type_business">Limited company or Limited Liability Partnership (<abbr>LLP</abbr>)</label>
                         </div>
                         <div class="govuk-radios__item">
