--- a/app/views/psd-revised-flow/products.html
+++ b/app/views/psd-revised-flow/products.html
@@ -113,131 +113,106 @@
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Summary
+                        Product brand
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        Product reported because it is unsafe.
-                        <!-- opss user: what is being alleged, shows here on current service -->
+                        Asda
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Country of origin
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        China
+                    </dd>
+                </div>                
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Description
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Lorem ipsum quia possimus minus nam quo minima inventore impedit quaerat architecto veniam iusto, similique ratione voluptatibus molestias iste ipsa ea reiciendis fuga odio.
+                    </dd>
+                </div>                  
+            </dl>
+identifiers
+            <dl class="govuk-summary-list"> 
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Barcode
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        342984-9813766
+                    </dd>
+                </div>                    
+                <div class="govuk-summary-list__row opss-summary-list__row--split">
+                    <dt class="govuk-summary-list__key">
+                        Batch number
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        
+                    </dd>
+                </div>
+                <div class="govuk-summary-list__row opss-summary-list__row--split">
+                    <dt class="govuk-summary-list__key">
+                        Customs code
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        
+                    </dd>
+                </div>                
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Other product identifiers
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        NO.DY807
                     </dd>
                 </div>
             </dl>
-
-            <dl class="govuk-summary-list">    
-                <div class="govuk-summary-list__row opss-summary-list__row--split">
-                    <dt class="govuk-summary-list__key">
-                        Status
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        Open
-                    </dd>
-                </div>
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Last updated</dt>
-                    <dd class="govuk-summary-list__value">About 8 hours ago</dd>
-                </div>
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Created</dt>
-                    <dd class="govuk-summary-list__value">13 December 2021</dd>
-                </div>
+            case related
+            <dl class="govuk-summary-list"> 
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Notifying country
+                        Product authenticity
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        <!--i class="govuk-body-s opss-secondary-text"> --- Omit if no value or UK ---</i-->
+                        Not provided
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Created by
+                        Product marking 
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        Darren Harridence - Renfrewshire Council
+                        Unknown
+                    </dd>
+                </div> 
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Date placed on the market
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        22 September 2021
+                    </dd>
+                </div> 
+                <div class="govuk-summary-list__row">
+                    <dt class="govuk-summary-list__key">
+                        Units affected
+                    </dt>
+                    <dd class="govuk-summary-list__value">
+                        Not provided
                     </dd>
                 </div>
                 <div class="govuk-summary-list__row">
                     <dt class="govuk-summary-list__key">
-                        Case owner
+                        Webpage
                     </dt>
                     <dd class="govuk-summary-list__value">
-                        Darren Harridence - Renfrewshire Council
+                       
                     </dd>
-                    <dd class="govuk-summary-list__actions">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Change<span class="govuk-visually-hidden"> the case owner</span>
-                        </a>
-                    </dd>
-                </div>
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Teams added
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        <ul class="govuk-list govuk-list--bullet">
-                            <li>
-                                Renfrewshire Council
-                            </li>
-                            <li>
-                                Watford Council
-                            </li>
-                        </ul>
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Change<span class="govuk-visually-hidden"> the teams added</span>
-                        </a>
-                    </dd>
-                </div>
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        Case restriction
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        Unrestricted
-                        <!-- OR
-                        <span class="opss-tag opss-tag--risk2 opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>Restricted
-                        -->
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Change<span class="govuk-visually-hidden"> the case restriction</span>
-                        </a>
-                    </dd>
-                </div>
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Case risk level</dt>
-                    <dd class="govuk-summary-list__value">
-                        <span class="opss-tag opss-tag--risk1 opss-tag--lrg">
-                            <span class="govuk-visually-hidden">This case is a</span>Serious risk
-                        </span>
-
-                        <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
-                            <span class="govuk-visually-hidden"> - </span>Not validated
-                        </span>
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Change<span class="govuk-visually-hidden"> the risk level</span>
-                        </a>
-                    </dd>
-                </div>
-                <!--div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">Risk level validated</dt>
-                    <dd class="govuk-summary-list__value">No</dd>
-                </div-->
-                <div class="govuk-summary-list__row">
-                    <dt class="govuk-summary-list__key">
-                        COVID-19
-                    </dt>
-                    <dd class="govuk-summary-list__value">
-                        <span class="opss-tag opss-tag--covid opss-tag--lrg"><span class="govuk-visually-hidden">This case is </span>COVID-19 related</span>
-                    </dd>
-                    <dd class="govuk-summary-list__actions">
-                        <a href="#" class="govuk-link govuk-link--no-visited-state">
-                            Change<span class="govuk-visually-hidden"> the coronavirus status</span>
-                        </a>
-                    </dd>
-                </div>
+                </div>                                                               
             </dl>
         </section>
 
