--- a/app/views/responsible-person-address/responsible-person-address_updates.html
+++ b/app/views/responsible-person-address/responsible-person-address_updates.html
@@ -92,7 +92,7 @@
               </h2>
             </legend>
             <div id="address-hint" class="govuk-hint govuk-!-font-size-16 govuk-!-margin-bottom-6 govuk-!-width-three-quarters">
-              The address of the business, individual or sole trader named as the legal entity of Responsible Person.
+              The address of the legal entity named as the Responsible Person.
             </div>
     
             <div class="govuk-form-group"><label class="govuk-label" for="address_line_1">Building and street <span class="govuk-visually-hidden">line 1 of 2</span></label><input aria-describedby="address-hint" class="govuk-input govuk-!-width-three-quarters" id="address_line_1" name="responsible_person[address_line_1]" type="text" value="100 Acacia Ave"></div>
